--- a/src/components/CompanyDetails/styles/CompanyDetails.css
+++ b/src/components/CompanyDetails/styles/CompanyDetails.css
@@ -18,6 +18,9 @@
 
 .CompanyDetails-Details {
   padding: 10px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 /* BreadCrumb */
 .Breadcrumbs {
